--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -10,19 +10,15 @@
 h1 {
   text-align: center;
   font-size: 1.75em;
-}
-
-p {
-  width: 95%;
-  padding-top: 30px;
-  margin-bottom: 10px;
-  border: 1px solid black;
-  background-color: grey;
-  position: relative;
+  padding: 25px;
 }
 
 .section {
   position: relative;
+  padding: 30px 10px 10px 10px;
+  border: 1px solid black;
+  background-color: grey;
+  margin: 0 10px 10px 10px;
 }
 
 #title1 {
@@ -30,7 +26,7 @@ p {
   border: 1px solid black;
   background-color: royalblue;
   top: 0;
-  right: 5%;
+  right: 0;
   font-size: 1.25em;
   text-align: center;
   padding: 0;
@@ -42,7 +38,7 @@ p {
   border: 1px solid black;
   background-color: goldenrod;
   top: 0;
-  right: 5%;
+  right: 0;
   font-size: 1.25em;
   text-align: center;
   padding: 0;
@@ -54,7 +50,7 @@ p {
   border: 1px solid black;
   background-color: red;
   top: 0;
-  right: 5%;
+  right: 0;
   font-size: 1.25em;
   text-align: center;
   padding: 0;
@@ -63,12 +59,16 @@ p {
 
 .row {
   width: 100%;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 /* tablet view  */
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
+    display: flex;
+    flex-wrap: wrap;
   }
   .col-md-1 {
     width: 8.33%;
@@ -112,6 +112,7 @@ p {
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
+    display: flex;
   }
   .col-lg-1 {
     width: 8.33%;
