fix coloring and uses bootstrap

--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -1,88 +1,70 @@
-#header-nav {
-  background-color: grey;
-}
-
-.row {
-  margin-bottom: 20px;
-}
-
 body {
   color: black;
   font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #E2F6F4;
 }
 
-.navbar-header a { /* restaurant name */
+/* Header */
+#header-nav {
+  background-color: #7B908D;
+  border: 0;
+  border-radius: 0;
+  width: 100vw;
+}
+
+.navbar-brand h1 { /* restaurant name */
   color: black;
+  font-size: 2em;
+  margin-top: -10px;
+  vertical-align: center;
 }
 
-.navbar-header a:hover { /* restaurant name */
+.navbar-brand a:hover { 
   text-decoration: none;
 }
 
+/* Navbar */
 button.navbar-toggle { /* nav button */
-  position: absolute;
-  right: 15px;
-  top: 15px;
-  padding: 0;
-  margin: 0;
-  border-color: 1px solid grey;
-  border-radius: 5px;
+  clear: both;
+  margin-top: -40px;
 }
 
-.icon-bar {
+.icon-bar { /* button */
   clear: both;
   float: left;
-  width: 40px;
-  padding: 5px;
-  background-color: grey;
-  border: 2px solid white;
-  border-radius: 3px;
+  border: 1px solid white;
+  border-radius: 1px;
+  vertical-align: center;
 }
 
-#nav-list li { /* collapsable nav menu */
+#nav-list { /* collapsable nav menu */
+  background-color: #D7FDF9;
+  font-size: 1.25em;
   text-align: center;
-  padding: 5px;
-  border: 1px solid black;
+}
+
+#nav-list li {
+  border: 1px solid #7B908D;
 }
 
 #nav-list a:hover{
-  background: grey;
+  background: #99B4B1;
   text-decoration: none;
 }
 
 #nav-list a {
   color: black;
+  text-align: center;
 }
 
+/* Content */
 .menu { /* Our menu */
-  margin-left: auto;
-  margin-right: auto;
+  text-align: center;
+  padding: 0 0 10px 0;
 }
 
-.menu-category { /* Chicken, Beef, Sushi */
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.menu-section {
-  background-color: grey;
-  padding: 0 5px 0 5px;
-}
-
-/* Desktop / Medium devices */
-@media (min-width: 768px) {
-
-}
-
-/* Tablet / Small devices */
-@media (min-width: 576px) and (max-width: 767px) {
-  
-}
-
-/* Mobile / Extra small devices */
-@media (max-width: 575px) {
-  .menu-section {
-    margin-left: 5px;
-    margin-right: 5px;
-  }
+.menu-section { /* Chicken, Beef, Sushi */
+  background-color: #7B908D;
+  margin-bottom: 20px;
 }
